fixed telephone numbers on safari mobile

--- a/style.css
+++ b/style.css
@@ -126,6 +126,11 @@ a {
     color: black;
 }
 
+a[href^tel] {
+    text-decoration: inherit;
+    color: inherit;
+}
+
 .mobile-hidden {
     display: none;
 }
